@@ -1,4 +1,6 @@
 5.0.0 -> 5.1a1:
+    - jbj: rpmrepo: populate other.sqlite with live data.
+    - jbj: rpmrepo: populate filelists.sqlite with live data (w schema hackery).
     - jbj: rpmrepo: populate primary.sqlite with live data.
     - jbj: add :sqlescape for use in SQL statements generated by --qf.
     - jbj: rework --yum:primary.sqlite to include quoting.
